src/assets/sass.scss
@import url('https://fonts.googleapis.com/css2?family=Poiret+One&display=swap');



$font-nav: 'Poiret One', cursive;
$font-about: "NeueHaasUnicaW1G-Regular", "Helvetica Neue", "Helvetica", sans-serif;
$font-projects: 'Source Sans Pro',sans-serif;
$main-color:#e73827;
$white:#fff;
$cinnabar: #e73827;
$tart-orange: #f7484e;
$cerulean:#27A3E7;
$blizzard-blue:#27c3e7;




$nav: $cerulean 28%, $blizzard-blue 86%;

button{
    cursor: pointer;
}

/*nav*/
.nav-wrapper {
    width: 100%;
    position: fixed;
    top:0;
    left:0;
    border-bottom:1px solid $cerulean; 
    background-color: $white;
    color:$cerulean;
    z-index: 99;
    height:4.5em;
    
  }
.nav{
    max-width: 1600px;  
    width:85%;
    margin:0 auto;
    display: flex;
    font-family: $font-nav;
    font-size: 2rem;
    height:100%;
} 

#left-button{
    flex:1;
    border-left:1px solid $cerulean;
    border-right: 1px solid $cerulean;

}

#right-button{
    flex:1;
    border-right: 1px solid $cerulean;
}



/*icons*/

.icons{
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    
}

.icons img{
    margin: 0 5px;
    width:24px;
    height:24px;
}


  



/*ABOUT*/



.about-wrapper{
    width:100%;
    margin-top:3rem;
    background-color: $white;
    border-bottom: 1px solid $cerulean;
    align-items: center;
}

.about{
    max-width: 1600px;
    width:85%;
    margin:0 auto;
    display:flex;
    flex-direction: row;
    min-height: calc(100vh - 8rem + 1px);
    border-right:1px solid $cerulean;
    border-left: 1px solid $cerulean;
    
}

.about-photo{
    padding:5rem;
    width:50%;
    border-right:1px solid $cerulean;
    display: flex;
    justify-content: center;
}

.about-photo img{
    max-height: 55em;
}

.about h1{
    font-size:2.4rem;
    margin: 0 0 .5em;
}


.about-text{
    padding: 5rem;
    font-family: $font-about;
    width:50%;
 
}


.about-text h3{
    
    padding:.3em 0;
    font-weight:400;
    font-size: 1.8rem;
    line-height: 2.7rem;;
}




/*projects*/

.projects-wrapper{
    width:85%;
    max-width:1600px;
    margin:0 auto 3rem auto;
}

.projects{
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    margin: 0 auto ;
    
}

.project{
    display:flex;
    flex-direction: row;
    align-items: center;
    width:50%;
    min-height: 23rem;
    padding:1.75rem;
    position: relative;
    border-left: 1px solid $cerulean;
    border-right: 1px solid $cerulean;
    border-bottom:1px solid $cerulean;
    background-color: $white; 

}

.project:nth-child(even){
    border-left:none;
}




.name h1{
    font-size:2.5rem;
    font-family: $font-projects;
    margin-bottom:.7em;
}

.name h3{
    font-family: $font-projects;
    font-size: 1.7rem;
    line-height: 1.9rem;
    font-weight: 400;
}


.deviceImages-wrapper{
    position: relative;
}

.device-images{
    display: flex;
    flex-direction: row;
    align-items: center;
    
}

.device-images img:nth-child(1){
    width:250px;
}

.device-images img:nth-child(2){
    height:150px;
   
}



.stack-icons{
    position: absolute;
    top:0;
    bottom:0;
    right:0;
    left:0;
    height:100%;
    width:100%;
    background-color: #fff;
    display:flex;
    justify-content: center;
    opacity: 0;
    transition: .9s ease;
    align-items: center;
}

.stack-icons:hover{
    opacity: 1;
}


.stack-icons img{
    width:9em; 
    max-width: 100%;
    margin:.75em;

}


/*bottom bar*/




#bar-bottom{
    width:100%;
    position:fixed;
    bottom:0;
    left:0;
    z-index:99;
    background-color: $white;
    border-top: 1px solid $cerulean;
    color:$cerulean;
}

.button-container{
    height:5rem;
    display:flex;
    align-items: center;
    justify-content: center;
}
.button-container img{
    width:36px;
}

/*buttons*/

.button-01{
    position: relative;
    width:100%;
    height:100%;
    padding:0;
    background-color: $white;
    border:0;
    font-size: 2rem;
    color:$cerulean;
    outline: none;
}

.button-02{
    width:85%;
    max-width: 1600px;
    border-left:1px solid $cerulean;
    border-right: 1px solid $cerulean;
}

.button-01:hover{
    box-shadow: 0px 0px 8px $cerulean;
    z-index: 50;
    
}

.button-01:active{
    border: 2px;
}

.btn:hover ~ .arrow-container{
    z-index: 99;
    background-color: $white;
    display: flex;
}

.btn:hover ~ .button-01{
    border:none;
}


.arrow-container{
    width:80%;
    position: absolute;
    display: none;
    justify-content: center;
    
}








/*borders and borderspace*/

.borderSpace-wrapper{
    width:85%;
    max-width: 1600px;
    margin:0 auto;
    position: relative;
}

.border-lines{
    border:2px solid $cerulean;
    position:absolute;
    top:0;
    bottom: 0;

}

.border-space{
    width:1.5rem;
    height:1.5rem;
    position: absolute;
    background: $white;
    z-index: 50;
}

.top{
    top:calc(4.4rem - 0.7rem);
}

.left{
    left: calc(-0.7rem)
}

.middle{
    left:calc(50% - .7rem)
}

.right{
    right: calc(-0.7rem)
}

.bottom{
    bottom:calc(-0.5rem);
}

.top-left{
    left:-0.8rem;
    top:-0.5rem;

}

.top-right{
    right:-0.8rem;
    top:-0.5rem;
}

.bottom-left{
    left:-0.5rem;
    bottom:-0.5rem;
}

.bottom-right{
    right:-0.5rem;
    bottom:-0.5rem
}

@media (max-width:1084px){
    .about{
        flex-direction: column;
    }

    .about-photo{
        border:none;
        width:100%;
    }
    .about-text{
        width:100%;
        padding-top:2em;
    }

    .projects{
        flex-direction: column;
    }

    .project{
        width:100%;
    }

    .project:nth-child(even){
        border-left: solid 1px $cerulean;
    }

     .bottom.middle{
        display: none;
    }
    .top.middle{
        display:none;
    }
}


@media (max-width: 768px){

    .about-text{
        padding: 3rem;
    }

    .about-photo{
        padding-bottom: 2em;
        
    }

    .about-photo img{
        max-height: 30em;
    }

   
}


@media(max-width:550px){

    .about-photo{
        display:none;
    }

    .borderSpace-wrapper{
        width:90%;
    }

    .nav{
        width:90%;
    }
    .about{
        width:90%;
    }
    .projects-wrapper{
        width:90%;
    }

    .button-01{
        width:90%;
    }
}

@media(max-width:375px){
    .project{
        flex-direction: column;
    }

    .device-images img:nth-child(1){
        width:200px
    }

}

